Actualizado input y vinculos

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -9,6 +9,7 @@
 <div class= "content">
 
   <div class= "contenido">
+    <a href="login.html"><div class="home"><img src="images/home.png" alt=" Home">Login</div></a>
     <div class= "imagen">
       <img src="images/phones.png" alt="Phones">
     </div>
@@ -31,15 +32,15 @@
 </div>
   <footer>
     <ul>
-      <li>About Us</li>
-      <li>Support</li>
-      <li>Blog</li>
-      <li>Press</li>
-      <li>API</li>
-      <li>Jobs</li>
-      <li>Privacy</li>
-      <li>Terms</li>
-      <li>&copy; 2014 Instagram</li>
+      <li><a href="about.html">About Us</a></li>
+      <li><a href="suport.html">Support</a></li>
+      <li><a href="blog.html">Blog</a></li>
+      <li><a href="press.html">Press</a></li>
+      <li><a href="api.html">API</a></li>
+      <li><a href="jobs.html">Jobs</a></li>
+      <li><a href="privacy.html">Privacy</a></li>
+      <li><a href="terms.html">Terms</a></li>
+      <li>&copy; 2014 Instagram</a></li>
     </ul>
 </footer>
 </div>
