--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -51,13 +51,13 @@
 
 <div id = "footer">
 <footer>
-  About Us <span>
-  Support<span>
-  Blog<span>
-  Press<span>
-  API<span>
-  Jobs<span>
-  Privacy<span>
+  About Us
+  Support
+  Blog
+  Press
+  API
+  Jobs
+  Privacy
   Terms
   <div id ="copyright">
   &copy; 2014 Instagram
@@ -66,4 +66,4 @@
 
 
 </body>
-</html>/
+</html>
