--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+    <link rel="stylesheet" type="text/css" href="css/main.css">
   <title>Instagram</title>
 </head>
+
 <body>
-  Instagram
+  <div class="blue">
+    <div class="toguether">
+      <div class="iphone">
+        <img src="file:///home/maria/ironhack/week1/day2/lab-css-instagram-clone/starter-code/images/phones.png">
+      </div>
 
-  Capture and Share the World's Moments
+      <div class="toguether-2">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+       <div class="images">
+        <img class="insta" src="file:///home/maria/ironhack/week1/day2/lab-css-instagram-clone/starter-code/images/brand.png">
+        <div><a class="home"> <div class="home-1"><img src="file:///home/maria/ironhack/week1/day2/lab-css-instagram-clone/starter-code/images/home.png">
+        </div> Log in<a/>
+        </div>
+      </div>
+        <div class="text-container">
+          <div id="text">
+            <h2>Capture and Share <br> the World's Moments</h2>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+            <p>Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life<br>
+               with friends and family.</p> <p>Take a picture or video, choose a filter to transform its look <br>and feel, then post to Instagram &mdash; it's that easy. You can <br>even share
+              to Facebook, Twitter, Tumblr and more. It's a <br> new way to see the world.</p> <p>Oh yeah, did we mention it's free? </p>
 
-  Oh yeah, did we mention it's free?
+              <div class="down">
+              <p> <div class="app-store"> <img src="file:///home/maria/ironhack/week1/day2/lab-css-instagram-clone/starter-code/images/badge-iphone.png">
+                </div>
+                <div class="android"> <img src="file:///home/maria/ironhack/week1/day2/lab-css-instagram-clone/starter-code/images/badge-android.png">
+                </div></p>
 
-  Download on the App Store
-  Get it on Google Play
+              </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="container">
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  </div>
+  <div class="footer">
+    <ul class="link">
+      <li><a href="#"> About Us</a></li>
+      <li> <a href="#">Support</a></li>
+      <li> <a href="#">Blog</a></li>
+      <li> <a href="#">Press</a></li>
+      <li> <a href="#">API</a></li>
+      <li> <a href="#">Jobs</a></li>
+      <li><a href="#"> Privacy</a></li>
+      <li> <a href="#">Terms</a></li>
+      <li style="color:#A4A4A4" >&copy; 2014 Instagram</li>
+    </ul>
 
-  &copy; 2014 Instagram
+  </div>
+
 </body>
+
 </html>
