faltan colocar los bloques

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+  <link href="css/main.css" rel="stylesheet">
   <title>Instagram</title>
 </head>
+
 <body>
-  Instagram
+  <div class="bloqueazul">
+  </div>
+  <div class="bloqueblanco">
+  </div>
+  <div class="bloque3contenedor">
+    <div class="imagenmoviles">
+      <img src="/Users/yurema/desktop/ironhack/week1/day2/lab-css-instagram-clone/starter-code/images/phones.png">
+    </div>
 
-  Capture and Share the World's Moments
+    <div class="contenedorinfo">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      <div class="instalogin">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <img src="/Users/yurema/desktop/ironhack/week1/day2/lab-css-instagram-clone/starter-code/images/brand.png">
 
-  Oh yeah, did we mention it's free?
+        <button>
+        <img src = "/Users/yurema/desktop/ironhack/week1/day2/lab-css-instagram-clone/starter-code/images/home.png">Log in
+      </button>
 
-  Download on the App Store
-  Get it on Google Play
+      </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+      <div class="textoinfo">
+        <img src="/Users/yurema/desktop/ironhack/week1/day2/lab-css-instagram-clone/starter-code/images/frame.png">
+          <div id="text">
+          <h2>Capture and Share the World's Moments</h2>
+          <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.
+          </p>
+          <p> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          </p>
+          Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play.
+          <div class="applegoogle">
+            <img source="/Users/yurema/desktop/ironhack/week1/day2/lab-css-instagram-clone/starter-code/images/badge-iphone.png">
+            <img source="/Users/yurema/desktop/ironhack/week1/day2/lab-css-instagram-clone/starter-code/images/badge-android.png">
+          </div>
+        </div>
 
-  &copy; 2014 Instagram
+      </div>
+
+
+
+
+    </div>
+
+
+
+
+  </div>
+  <div class="foo"></div>
+  <footer>
+    About Us Support Blog Press API Jobs Privacy Terms &copy; 2014 Instagram
+  </footer>
+  </div>
+
 </body>
+
 </html>
