--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,38 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+  <img src="images/phones.png" class="iphone" alt="Iphone">
   Instagram
 
-  Capture and Share the World's Moments
+  <img src="images/frame.png" class="frame" alt="Frame">
+  <div class="paragraph">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <h2>Capture and Share<br> the World's Moments</h2>
+    <p>
+      Instagram is a fast, beautiful and fun way to share your life with friends and family.<br>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      <br>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br>
 
-  Oh yeah, did we mention it's free?
+      <br>Oh yeah, did we mention it's free?
+    </p>
+  </div>
 
-  Download on the App Store
-  Get it on Google Play
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
 
-  &copy; 2014 Instagram
+  <footer>
+    About Us
+    Support
+    Blog
+    Press
+    API
+    Jobs
+    Privacy
+    Terms
+
+    &copy; 2014 Instagram
+  </footer>
 </body>
 </html>
