--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -5,8 +5,9 @@
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+
   <img src="images/phones.png" class="iphone" alt="Iphone">
-  Instagram
+
 
   <img src="images/frame.png" class="frame" alt="Frame">
   <div class="paragraph">
@@ -22,18 +23,19 @@
   </div>
 
 
+  <div class="foot">
+    <footer>
+      <a href="#"> About Us </a>
+      <a href="#"> Support </a>
+      <a href="#"> Blog </a>
+      <a href="#"> Press </a>
+      <a href="#"> API </a>
+      <a href="#"> Jobs </a>
+      <a href="#"> Privacy </a>
+      <a href="#"> Terms </a>
 
-  <footer>
-    About Us
-    Support
-    Blog
-    Press
-    API
-    Jobs
-    Privacy
-    Terms
-
-    &copy; 2014 Instagram
-  </footer>
+      &copy; 2014 Instagram
+    </footer>
+  </div>
 </body>
 </html>
