positioned footer using absolute

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -34,7 +34,7 @@
       <a href="#"> Privacy </a>
       <a href="#"> Terms </a>
 
-      &copy; 2014 Instagram
+      <a href="#" class="copyright"> &copy; 2014 Instagram </a>
     </footer>
   </div>
 </body>
