added and positioned buttons

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -22,6 +22,9 @@
     </p>
   </div>
 
+  <img src="images/badge-android.png" alt="android" class="android">
+  <img src="images/badge-iphone.png" alt="android" class="iphone-badge">
+
 
   <div class="foot">
     <footer>
