added and positioned logo

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-
+  <img src="images/brand.png" alt="logo" class="brand">
   <img src="images/phones.png" class="iphone" alt="Iphone">
 
 
