--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -5,9 +5,14 @@
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+
   <img src="images/brand.png" alt="logo" class="brand">
   <img src="images/phones.png" class="iphone" alt="Iphone">
 
+  <div class="log-in">
+    <img src="images/home.png" alt="home">
+    Log in
+  </div>
 
   <img src="images/frame.png" class="frame" alt="Frame">
   <div class="paragraph">
