--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,52 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="blue-background">
+  </div>
+  <div class="content">
+  <div class="main">
+    <div class="left-box">
+      <img src="./images/phones.png" alt="Phone">
+    </div>
+    <div class="right-box">
+      <div class="top-right-box">
+      <img src="./images/brand.png" alt="Instagram">
+      <button type="button" name="log-in"><img src="./images/home.png" alt="home"><span>Log in</span></button>
+      </div>
+      <div class="bottom-right-box">
+      <h2>Capture and Share the World's Moments</h2>
+      <p>
+        Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.
+        <br>
+        <br>
+        Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <br>
+        <br>
+        Oh yeah, did we mention it's free?
+      </p>
+      <img src="./images/badge-iphone.png" alt="Download on the App Store">
+      <img src="./images/badge-android.png" alt="Get it on Google Play">
+      </div>
+    </div>
+  </div>
+  <footer>
+    <nav>
+      <ul>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Support</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Press</a></li>
+        <li><a href="#">API</a></li>
+        <li><a href="#">Jobs</a></li>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Terms</a></li>
+        <li>&copy; 2014 Instagram</li>
+      </ul>
+    </nav>
+  </footer>
+  </div>
 </body>
 </html>
