first commit Instagram clone

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Instagram</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="./css/main.css">
+  <title>Instagram Clone</title>
 </head>
 <body>
-  Instagram
+<div class="background">
 
-  Capture and Share the World's Moments
+  <div class="infowrap">
+  <div class="phone-img">
+    <img class="phones" src="images/phones.png" alt="phones">
+  </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+<div class="parent">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+<div class="logos">
+  <img src="images/brand.png" alt="logo">
+  <div class ="button">
+  <button class="home"   type="button" name="button" >
+    <img src="images/home.png" alt="homeimg">
+    Log in</button>
 
-  Oh yeah, did we mention it's free?
+</div>
+</div>
 
-  Download on the App Store
-  Get it on Google Play
+<div class="info">
+  <h2>Capture and Share the World's Moments</h2>
+  <p>Instagram is a <span>fast</span>, <span>beautiful</span> and <span> fun </span> way to share your life with friends and family.</p> <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You
+    can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p><p> Oh yeah, did we mention it's free?
+    </p>
+      <img src="images/badge-iphone.png" alt="Download on the App Store">
+      <img src="images/badge-android.png" alt="Get it on Google Play">
+</div>
+</div>
+</div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  <footer>
+  <a href="#">About Us</a>
+  <a href="#">Support</a>
+  <a href="#">Blog</a>
+  <a href="#">Press</a>
+  <a href="#">API</a>
+  <a href="#">Jobs</a>
+  <a href="#">Privacy</a>
+  <a href="#">Terms</a>
 
   &copy; 2014 Instagram
+  </footer>
+</div>
 </body>
 </html>
