Added html and css files

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,57 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
+
+<div class=blueheader>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div class="content-middle">
+    <img id="phone" src="images/phones.png" alt="iphones">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <main>
+      <img id="brand" src="images/brand.png" alt="instagram-brand">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <a id="login-lnk" href="#0"><img id="home" src="images/home.png" alt="home-login"><b>Log in</b></a>
 
-  Oh yeah, did we mention it's free?
+      <div class="text-details">
+        <h1>Capture and Share the World's Moments</h1>
 
-  Download on the App Store
-  Get it on Google Play
+        <p>
+          Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.
+        </p>
+        <p>
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        </p>
+        <p>
+          Oh yeah, did we mention it's free?
+        </p>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+        <img class="download" id="dliphone" src="images/badge-iphone.png" alt="app-store">
 
-  &copy; 2014 Instagram
+        <img class="download" id="dlandroid" src="images/badge-android.png" alt="google-play">
+      </div>
+
+    </main>
+  </div>
+
+  <footer>
+    <b>
+    ABOUT US
+    SUPPORT
+    BLOG
+    PRESS
+    API
+    JOBS
+    PRIVACY
+    TERMS
+    </b>
+
+    <span>&copy; 2014 Instagram</span>
+  </footer>
+
 </body>
+</div>
+
 </html>
