--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,46 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div id="background">
+  <div id="parent">
+  <img src="images/phones.png" alt="Phones" id="phones">
+  <div class="container">
+    <img src="images/brand.png" alt="Instagram" id="title">
+    <div id="home"><img src="images/home.png" id= "home_img">Log in
+    </div>
+  <div class="text">
 
-  Capture and Share the World's Moments
+  <h1>Capture and Share the World's Moments</h1>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <p>Instagram is a fast, beautiful and fun way to share your life with friends
+    and family.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <p>Take a picture or video, choose a filter to transform its look and feel, then
+    post to Instagram &mdash; it's that easy. You can even share to Facebook,
+    Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Oh yeah, did we mention it's free?
+  <p>Oh yeah, did we mention it's free?</p>
 
-  Download on the App Store
-  Get it on Google Play
+  <img src="images/badge-iphone.png" alt="Download on the App Store">
+  <img src="images/badge-android.png" alt="Get it on Google Play">
+  </div>
+  </div>
+  </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <footer>
+    <a href="#0">About Us</a>
+    <a href="#0">Support</a>
+    <a href="#0">Blog</a>
+    <a href="#0">Press</a>
+    <a href="#0">API</a>
+    <a href="#0">Jobs</a>
+    <a href="#0">Privacy</a>
+    <a href="#0">Terms</a>
+    <span>&copy; 2014 Instagram</span>
+  </footer>
+  </div>
 </body>
 </html>
