--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,49 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <title>Instagram</title>
-  <link rel="stylesheet" href="css/main.css">
-</head>
-<body>
+ <html lang="en">
+ <head>
+   <title>Instagram</title>
+   <link rel="stylesheet" href="./css/main2.css">
+ </head>
+ <body>
 
-  <img src="images/brand.png" alt="logo" class="brand">
-  <img src="images/phones.png" class="iphone" alt="Iphone">
+   <div class="body-container">
+     <div class="badge">
+       <img src="images/badge-android.png" alt="Android" class="android">
+       <img src="images/badge-iphone.png" alt="Iphone" class="iphone">
+     </div>
+     <img src="images/phones.png" alt="Iphone" class="phones">
+     <div class="main-txt">
 
-  <div class="log-in">
-    <img src="images/home.png" alt="home">
-    Log in
-  </div>
+       <h2>Capture and Share<br> the World's Moments</h2>
+        <p>
+           Instagram is a fast, beautiful and fun way to share your life with friends and family.<br>
 
-  <img src="images/frame.png" class="frame" alt="Frame">
-  <div class="paragraph">
+           <br>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br>
 
-    <h2>Capture and Share<br> the World's Moments</h2>
-    <p>
-      Instagram is a fast, beautiful and fun way to share your life with friends and family.<br>
+           <br>Oh yeah, did we mention it's free?
+         </p>
+     </div>
+   </div>
 
-      <br>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br>
-
-      <br>Oh yeah, did we mention it's free?
-    </p>
-  </div>
-
-  <img src="images/badge-android.png" alt="android" class="android">
-  <img src="images/badge-iphone.png" alt="android" class="iphone-badge">
-
-
-  <div class="foot">
+  <div class="footer-container">
     <footer>
-      <a href="#"> About Us </a>
-      <a href="#"> Support </a>
-      <a href="#"> Blog </a>
-      <a href="#"> Press </a>
-      <a href="#"> API </a>
-      <a href="#"> Jobs </a>
-      <a href="#"> Privacy </a>
-      <a href="#"> Terms </a>
+       <a href="#"> About Us </a>
+       <a href="#"> Support </a>
+       <a href="#"> Blog </a>
+       <a href="#"> Press </a>
+       <a href="#"> API </a>
+       <a href="#"> Jobs </a>
+       <a href="#"> Privacy </a>
+       <a href="#"> Terms </a>
 
-      <a href="#" class="copyright"> &copy; 2014 Instagram </a>
+       &copy; 2014 Instagram
     </footer>
-  </div>
-</body>
-</html>
+
+ </div>
+ </body>
+ </html>
