--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,11 +2,12 @@
  <html lang="en">
  <head>
    <title>Instagram</title>
-   <link rel="stylesheet" href="./css/main2.css">
+   <link rel="stylesheet" href="./css/main.css">
  </head>
  <body>
 
    <div class="body-container">
+     <img src="images/brand.png" alt="logo" class="logo">
      <div class="badge">
        <img src="images/badge-android.png" alt="Android" class="android">
        <img src="images/badge-iphone.png" alt="Iphone" class="iphone">
