--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -6,6 +6,7 @@
  </head>
  <body>
 
+
    <div class="body-container">
      <img src="images/brand.png" alt="logo" class="logo">
      <div class="badge">
@@ -13,6 +14,7 @@
        <img src="images/badge-iphone.png" alt="Iphone" class="iphone">
      </div>
      <img src="images/phones.png" alt="Iphone" class="phones">
+
      <div class="main-txt">
 
        <h2>Capture and Share<br> the World's Moments</h2>
@@ -24,7 +26,13 @@
            <br>Oh yeah, did we mention it's free?
          </p>
      </div>
+     <div class="log-btn-container">
+       <img src="images/home.png" alt="home" class="log-in">
+       Log in
+     </div>
    </div>
+
+
 
   <div class="footer-container">
     <footer>
