--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,22 +2,59 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+<div>
 
-  Capture and Share the World's Moments
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+<!--<div>
+  <header>
+  <img src="images/brand.png" alt="instagdram logo">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <a href ="">Login</a>
+</header>
 
-  Oh yeah, did we mention it's free?
 
-  Download on the App Store
-  Get it on Google Play
+</div> -->
 
-  About Us
+<div>
+
+  <aside>
+    <img src="images/phones.png" alt="phones">
+  </aside>
+
+
+
+<main>
+  <header>
+  <img src="images/brand.png" alt="instagdram logo">
+
+  <button>
+    <img src="images/home.png" alt="home login">
+    <a href="#0"> Login</a>
+  </button>
+  </header>
+
+
+  <div class="backimage">
+  <h1>Capture and Share the World's Moments</h1>
+
+  <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+
+  <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+
+  Oh yeah, did we mention it's free?</p>
+
+<img src="images/badge-iphone.png" alt="iohone">
+<img src="images/badge-android.png" alt="android">
+</div>
+</main>
+</div>
+
+
+    <footer>
+      About Us
   Support
   Blog
   Press
@@ -27,5 +64,8 @@
   Terms
 
   &copy; 2014 Instagram
+</footer>
+</div>
+</div>
 </body>
 </html>
