--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,70 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+
+  <link rel="stylesheet" href="./css/main.css">
 </head>
+
 <body>
-  Instagram
+    <div class="wrapper">
 
-  Capture and Share the World's Moments
+      <div class="topHalf">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      </div>
 
-  Oh yeah, did we mention it's free?
+    <div class="bottomHalf">
 
-  Download on the App Store
-  Get it on Google Play
+      <div class="iphoneImg">
+        <img src="./images/phones.png" />
+      </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+      <div class="cardWrapper">
 
-  &copy; 2014 Instagram
+        <div class="cardHead">
+          <header>
+            <img src="./images/brand.png" class="brandImg" />
+
+            <button class="loginButton"> Login </button>
+          </header>
+        </div>
+
+      <div class="cardInfo">
+        <div class="cardHeader">
+          <h3> Capture and Share the World's Moments </h3>
+        </div>
+          <p> Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family. </p>
+
+          <p> Take a picture or video, choose a filter to transform its look and feel,
+              then post to Instagram &mdash; it's that easy. You can even share to Facebook,
+              Twitter, Tumblr and more. It's a new way to see the world. </p>
+
+          <p> Oh yeah, did we mention it's free? </p>
+          <div class="cardInfoButtons">
+            <img src="./images/badge-iphone.png" />
+            <img src="./images/badge-android.png" />
+          </div> <!--.cardInfoButtons-->
+
+      </div> <!--.cardInfo-->
+
+    </div> <!--.cardWrapper-->
+  </div>
+  <footer>
+    <nav>
+      <ul>
+        <li> <a href="#"> About Us </a> </li>
+        <li> <a href="#"> Support </a> </li>
+        <li> <a href="#"> Blog </a> </li>
+        <li> <a href="#"> Press </a> </li>
+        <li> <a href="#"> API </a> </li>
+        <li> <a href="#"> Jobs </a> </li>
+        <li> <a href="#"> Privacy </a> </li>
+        <li> <a href="#"> Terms </a> </li>
+    </ul>
+  </nav>
+  <span class="copyRight"> &copy; 2014 Instagram </span>
+  </footer>
+
+  </div>
 </body>
 </html>
