--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
+  <head>
+    <title> Instagram </title>
+    <link rel="stylesheet" href="./css/main.css">
+  </head>
+  <body>
+    <div class="container">
 
-  Capture and Share the World's Moments
+      <div class="aside">
+        <img src="./images/phones.png">
+      </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      <div class="main">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <header>
+          <h1>
+            <img src="./images/brand.png">
+          </h1>
+          <button>
+            <img src="./images/home.png">
+            <p><b>Log in</b></p>
+          </button>
+        </header>
 
-  Oh yeah, did we mention it's free?
+              <h2> Capture and Share<br> the World's Moments </h2>
 
-  Download on the App Store
-  Get it on Google Play
+              <p> Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+              <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  &copy; 2014 Instagram
-</body>
+              <p>Oh yeah, did we mention it's free? </p>
+
+              <p>
+                <img class="app1" src="./images/badge-iphone.png">
+              </p>
+              <p>
+                <img class="app2" src="./images/badge-android.png">
+              </p>
+        </div>
+        </div>
+        <footer>
+          About Us
+          Support
+          Blog
+          Press
+          API
+          Jobs
+          Privacy
+          Terms
+          <span>&copy; 2014 Instagram</span>
+        </footer>
+  </body>
 </html>
