my instagram exercise

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,46 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel='stylesheet' href='css/main.css' style='text/css'>
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+<div class='mainInfo'>
+<img class='phoneImg' src='/Users/shincero/code/labs/lab-css-instagram-clone/starter-code/images/phones.png'>
+  <div class='homeBtnLocation'>
+  <button class='homeBtn'><img src='/Users/shincero/code/labs/lab-css-instagram-clone/starter-code/images/home.png'>     Log In</button>
+  </div>
+  <div class='floatL'>
+    <h1><img class='floatL' src='/Users/shincero/code/labs/lab-css-instagram-clone/starter-code/images/brand.png'></h1>
+  </div>
+  <div class='infoParagraph'>
+    <h2 class='darkBlue'>Capture and Share the World's Moments</h2>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.<br><br>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's    that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br><br>
 
-  Oh yeah, did we mention it's free?
+    Oh yeah, did we mention it's free?</p>
 
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+    <a href='#0' class='links1'><img src='/Users/shincero/code/labs/lab-css-instagram-clone/starter-code/images/badge-iphone.png'></a>
+    <a href='#0' class='links2'><img   src='/Users/shincero/code/labs/lab-css-instagram-clone/starter-code/images/badge-android.png'></a>
+  </div>
+<footer class='foot'>
+<div class='navigation'>
+  <table class='table'>
+    <tr>
+      <td><a href='#0'>About Us</a></td>
+      <td><a href='#0'>Support</a></td>
+      <td><a href='#0'>Blog</a></td>
+      <td><a href='#0'>Press</a></td>
+      <td><a href='#0'>API</a></td>
+      <td><a href='#0'>Jobs</a></td>
+      <td><a href='#0'>Privacy</a></td>
+      <td><a href='#0'>Terms</a></td>
+      <td>&pcopy; 2014 Instagram</td>
+    </tr>
+  </table>
+</div>
+</footer>
 </body>
 </html>
