added blue heading bar with position fixed and z-indez of -1

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -5,7 +5,7 @@
    <link rel="stylesheet" href="./css/main.css">
  </head>
  <body>
-
+   <div class="blue-heading-container"></div>
 
    <div class="body-container">
      <img src="images/brand.png" alt="logo" class="logo">
