added border bottom and fixed some grammar

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -15,7 +15,7 @@
      </div>
      <img src="images/phones.png" alt="Iphone" class="phones">
 
-     <div class="main-txt">
+     <div class="main-txt-container">
 
        <h2>Capture and Share<br> the World's Moments</h2>
         <p>
@@ -28,7 +28,7 @@
      </div>
      <div class="log-btn-container">
        <img src="images/home.png" alt="home" class="log-in">
-       Log in
+        Log in
      </div>
    </div>
 
