--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,21 +2,37 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
-<body>
-  Instagram
+<body class = "backgroundTop">
+  <div class = "mainContent">
+    <div class = "col1">
+      <img src = "images/phones.png"></img>
+    </div>
+    <div class = "col1">
+      <div>
+        <img src = "images/brand.png"></img>
+        <button type="button">
+          <img src = "images/home.png"></img>
+          Log in
+        </button>
+      </div>
+      <div class = "textAndLinks">
+        <h1>Capture and Share the World's Moments</h1>
 
-  Capture and Share the World's Moments
+        <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
+        <p>Oh yeah, did we mention it's free?</p>
+          <div>
+            <img src = "images/badge-iphone.png"></img>
+            <img src = "images/badge-android.png"></img>
+          </div>
+      </div>
+    </div>
+  </div>
+  <footer class="footerStyle" style="clear: both;">
   About Us
   Support
   Blog
@@ -25,7 +41,7 @@
   Jobs
   Privacy
   Terms
-
   &copy; 2014 Instagram
+  </footer>
 </body>
 </html>
