--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,51 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link type="text/css" rel="stylesheet" href="css/main.css"/>
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+<div class="container">
+<div class="phones">
+  <img src="images/phones.png" alt="Overlapping phones">
+</div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+<div class="the-rest">
+  <img src="images/brand.png" alt="brand image">
+  <div class="home"><img src="images/home.png" alt="home"><span class="login">Login</span></div>
+
+<div class="frame">
+  <h3>Capture and Share<br>
+    the World's Moments</h3>
+
+  Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.
 
   Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
   Oh yeah, did we mention it's free?
+  <div class="badges">
+  <img src="images/badge-android.png">
+  <img src="images/badge-iphone.png">
+</div>
+</div>
 
-  Download on the App Store
-  Get it on Google Play
+</div>
+</div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+<footer>
+  <ul>
+  <li>About Us</li>
+  <li>Support</li>
+  <li>Blog</li>
+  <li>Press</li>
+  <li>API</li>
+  <li>Jobs</li>
+  <li>Privacy</li>
+  <li>Terms</li>
+  <li><span class="copyright">&copy; 2014 Instagram<span></li>
+</ul>
 
-  &copy; 2014 Instagram
+
+</footer>
 </body>
 </html>
