--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
+  <head>
+    <title>Instagram</title>
+    <link rel="stylesheet" type="text/css" href="css/main.css">
+  </head>
+  <body>
+    <div class="header">
+      <div class="left">
+        <img src="./images/phones.png" alt="phones image" />
+      </div>
 
-  Capture and Share the World's Moments
+      <div class="right">
+        <div class="top-element">
+          <div class="instagram">
+            <img src="./images/brand.png" alt="brand logo" />
+          </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+          <button>
+            <img src="./images/home.png" alt="home image" />
+            <span class="button-center"><strong>Log in</strong></span>
+          </button>
+        </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <div class="middle-element">
+          <h1>Capture and Share the World's Moments</h1>
+          <div class="retrait">
+            <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+            <p>Oh yeah, did we mention it's free?</p>
+          </div>
+        </div>
 
-  Oh yeah, did we mention it's free?
+        <div class="application">
+          <div class="apple">
+            <img src="./images/badge-iphone.png" alt="app store logo" />
+          </div>
 
-  Download on the App Store
-  Get it on Google Play
+          <div class="android">
+            <img src="./images/badge-android.png" alt="android logo" />
+          </div>
+        </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+      </div>
+    </div>
+    <footer>
+      <ul>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Support</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Press</a></li>
+        <li><a href="#">API</a></li>
+        <li><a href="#">Jobs</a></li>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Terms</a></li>
+        <li class="grey">&copy; 2014 Instagram</li>
+      </ul>
+    </footer>
+  </body>
 </html>
