--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
+  <head>
+    <title>Instagram</title>
+    <link rel="stylesheet" href="css/main.css">
+  </head>
+  <body>
 
-  Capture and Share the World's Moments
+    <section class="fondo1">
+     <div>
+      <div class="img-P">
+         <img src="images/phones.png">
+      </div>
+      <!-- <div class="img-S">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      </div> -->
+       <div>
+      <button class="log-in" type="button" name="button" href="https://www.instagram.com/"><img src="images/home.png">Log in </a>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      </div>
 
-  Oh yeah, did we mention it's free?
+      <div>
+        <div class="div-Pag">
+            <img src="images/brand.png">
+        </div>
 
-  Download on the App Store
-  Get it on Google Play
+          <div class="div-Pag">
+            <img src="images/frame.png">
+          </div>
+      </div>
+    </div>
+  </section>
+  <section>
+      <div class="big-text">
+            <h1>Capture and Share<br> the World's Moments</h1>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+                Instagram is a <strong>fast, beautiful</strong> and <b>fun</b> way to share your life with friends and family.
 
-  &copy; 2014 Instagram
-</body>
+            <p>Take a picture or video, choose a filter to transform its look
+            nd feel, then post to Instagram &mdash; it's that easy. You can
+            even share to Facebook, Twitter, Tumblr and more. It's a
+            new way to see the world.</p>
+
+            Oh yeah, did we mention it's free?
+          </div>
+
+          <div>
+            <a href="#"><img class="apps" src="images/badge-iphone.png"></a>
+          </div>
+          <div>
+            <a href="#"><img class="appss" src="images/badge-android.png"></a>
+          </div>
+
+       </div>
+   </section>
+   <section>
+     <div class="foot">
+  <a href="@">About Us  </a>
+  <a href="@">Support  </a>
+  <a href="@">Blog  </a>
+  <a href="@">Press  </a>
+  <a href="@">API  </a>
+  <a href="@">Jobs  </a>
+  <a href="@">Privacy  </a>
+  <a href="@">Terms  </a>
+    &copy; 2014 Instagram
+     </div>
+   </section>
+
+
+  </body>
 </html>
