--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,49 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+ <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <header>
 
-  Capture and Share the World's Moments
+  </header>
+  <div id="content">
+  <div id="izquierdo">
+    <img src="images/phones.png">
+  </div>
+  <div id="derecho">
+    <div id="superior-derecho">
+    <img id="logo" src="images/brand.png">
+    <button><img src="images/home.png"><p>Log in</p></button>
+    </div>
+    <div id="inferior-derecho">
+      <div class="text">
+        <p class="title">Capture and Share the World's Moments</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <p> a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Oh yeah, did we mention it's free?
+        <p>Oh yeah, did we mention it's free?</p>
 
-  Download on the App Store
-  Get it on Google Play
+      </div>
+      <img src="images/badge-iphone.png">
+      <img src="images/badge-android.png">
+    </div>
+  </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+</div>
+<footer>
+  <span>About Us</span>
+  <span>Support</span>
+  <span>Blog</span>
+  <span>Press</span>
+  <span>API</span>
+  <span>Jobs</span>
+  <span>Privacy</span>
+  <span>Terms</span>
+  <span>&copy; 2014 Instagram</span>
+</footer>
 
-  &copy; 2014 Instagram
 </body>
 </html>
