--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,9 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="./css/main.css">
   <title>Instagram</title>
 </head>
 <body>
+
+  <div>
+    <div class="box-left">
+    </div>
+    <div class="box-right">
+
+    </div>
+
+
+  </div>
+
+
+
+
+
+
+
+
   Instagram
 
   Capture and Share the World's Moments
