--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,47 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <meta charset="utf-8">
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div class="bloque-total">
+    <div class="phone">
+      <img src ="images/phones.png">
+    </div>
+    <div class="bloque-derecha">
+      <div class="cabecera">
+        <img class="logo" src = "images/brand.png" alt="Instagram">
+        <div class="login-buttom">
+          <img class="home" src = "images/home.png">
+          Log in
+        </div>
+      </div>
+      <div class = "bloque-blanco">
+        <h2> Capture and Share</br> the World's Moments</h2>
+        <div class="content">
+          <p>Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
 
-  Capture and Share the World's Moments
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+          <p>Oh yeah, did we mention it's free?</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+          <img src="images/badge-iphone.png"  Download on the App Store>
+          <img src="images/badge-android.png"    Get it on Google Play>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="footer">
+    About Us
+    Support
+    Blog
+    Press
+    API
+    Jobs
+    Privacy
+    Terms
+    &copy; 2014 Instagram
+  </div>
 </body>
 </html>
