--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,48 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <main>
 
-  Capture and Share the World's Moments
+    <div class="banner">
+      <img src="images/phones.png" alt="phones-banner">
+    </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div class="description">
+      <div class="home">
+        <img src="images/brand.png" alt="instagram">
+        <a href="#"><button type="button" name="button"><img src="images/home.png" alt="home-login">Log in</button></a>
+      </div>
+      <div class="content-text">
+        <h1>Capture and Share the World's Moments</h1>
+        <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Oh yeah, did we mention it's free?
+        <p class="ultimo-parrafo">Oh yeah, did we mention it's free?</p>
+        <div>
+          <img src="images/badge-iphone.png" alt="app-store">
+          <img src="images/badge-android.png" alt="google-store">
+        </div>
+      </div>
+    </div>
+  </main>
 
-  Download on the App Store
-  Get it on Google Play
+  <footer>
+    <ul>
+      <a href="#"><li>About Us</li></a>
+      <a href="#"><li>Support</li></a>
+      <a href="#"><li>Blog</li></a>
+      <a href="#"><li>Press</li></a>
+      <a href="#"><li>API</li></a>
+      <a href="#"><li>Jobs</li></a>
+      <a href="#"><li>Privacy</li></a>
+      <a href="#"><li>Terms</li></a>
+      <li>&copy; 2014 Instagram</li>
+    </ul>
+  </footer>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
 </body>
 </html>
