--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -14,22 +14,22 @@
   </div>
   <div id="derecho">
     <div id="superior-derecho">
-    <img id="logo" src="images/brand.png">
-    <button><img src="images/home.png"><p>Log in</p></button>
+    <div id="logo"> <img src="images/brand.png"></div>
+    <div class="button"><img src="images/home.png"><span>Log in</span></div>
     </div>
     <div id="inferior-derecho">
       <div class="text">
         <p class="title">Capture and Share the World's Moments</p>
 
-        <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+        <p>Instagram is a <span>fast, beautiful</span> and <span>fun</span> way to share your life with friends and family.</p>
 
         <p> a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
         <p>Oh yeah, did we mention it's free?</p>
 
       </div>
-      <img src="images/badge-iphone.png">
-      <img src="images/badge-android.png">
+      <img class="down-button" src="images/badge-iphone.png">
+      <img class="down-button" src="images/badge-android.png">
     </div>
   </div>
 
@@ -43,7 +43,7 @@
   <span>Jobs</span>
   <span>Privacy</span>
   <span>Terms</span>
-  <span>&copy; 2014 Instagram</span>
+  <span class="copyright">&copy; 2014 Instagram</span>
 </footer>
 
 </body>
