--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
+
 <body>
-  Instagram
+  <div class="title"></div>
+  <aside>
+    <img src="images/phones.png" alt="">
+  </aside>
+  <section class="brand">
+    <div class="brand-title">
+      <img src="images/brand.png" alt="">
+      <button>
+        <img src="images/home.png" alt="">
+        <span>Log in</span>
+      </button>
+    </div>
+    <div class="instagram-message">
+      <h1>Capture and Share the World's Moments</h1>
+      <p>Instagram is a
+        <span>fast</span>,
+        <span>beautiful</span> and
+        <span>fun</span> way to share your life with friends and family.</p>
+      <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy.
+        You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+      <p>Oh yeah, did we mention it's free?</p>
+    </div>
+    <div class="store">
+      <img class="store-btn" src="images/badge-iphone.png" alt="">
+      <img class="android-btn" src="images/badge-android.png" alt="">
+    </div>
+  </section>
+  <footer>
+    <ul class="list-menu">
+      <li class="menu-item">About Us</li>
+      <li class="menu-item">Support</li>
+      <li class="menu-item">Blog</li>
+      <li class="menu-item">Press</li>
+      <li class="menu-item">API</li>
+      <li class="menu-item">Jobs</li>
+      <li class="menu-item">Privacy</li>
+      <li class="menu-item">Terms</li>
+      <li class="menu-item special-item">&copy; 2014 Instagram</li>
+    </ul>
 
-  Capture and Share the World's Moments
+  </footer>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
 </body>
+
 </html>
