--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -13,13 +13,13 @@
     <div class="bloque-derecha">
       <div class="cabecera">
         <img class="logo" src = "images/brand.png" alt="Instagram">
-        <div class="login-buttom">
+        <div class="login-button">
           <img class="home" src = "images/home.png">
           Log in
         </div>
       </div>
       <div class = "bloque-blanco">
-        <h2> Capture and Share</br> the World's Moments</h2>
+        <div class="titulo"> Capture and Share</br> the World's Moments</div>
         <div class="content">
           <p>Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
 
@@ -34,6 +34,7 @@
     </div>
   </div>
   <div class="footer">
+    <div class="list-footer">
     About Us
     Support
     Blog
@@ -42,7 +43,8 @@
     Jobs
     Privacy
     Terms
-    &copy; 2014 Instagram
+  </div>
+  <div class="copyright"> &copy; 2014 Instagram </div>
   </div>
 </body>
 </html>
