--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,22 +2,49 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div class="blue-box"></div>
+<div class="Global">
+  <div class="box-mobile">
+  <img class="img-phones" src="images/phones.png" >
+  </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+<div class="box-text">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <div class="Instagram"></div>
+      <img class="logotipo" src="images/brand.png" >
+      <div class="button">
+        <img class="home" src="images/home.png">
+        <div class="Log">Log in
+      </div>
+      </div>
+      <div class="content">
+        <img class="white-box" src="images/frame.png">
 
-  Oh yeah, did we mention it's free?
+            <div class="Title">
+              <li>Capture and Share</li>
+              <li>the World's Moments</li>
+            </div>
+            <div class="texto" style="line-height:30px;">
+            <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
 
-  Download on the App Store
-  Get it on Google Play
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook,     Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  About Us
+            <p>Oh yeah, did we mention it's free?</p>
+
+            </div>
+            <div class="anuncio">
+            <img class="ios" src="images/badge-iphone.png">
+            <img class="android" src="images/badge-android.png">
+            </div>
+      </div>
+</div>
+</div>
+<div class="footer">
+  <div class="blue-words">
   Support
   Blog
   Press
@@ -25,7 +52,10 @@
   Jobs
   Privacy
   Terms
-
+  </div>
+    <div class="grey-words">
   &copy; 2014 Instagram
+    </div>
+  </div>
 </body>
 </html>
