--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -9,7 +9,8 @@
 
   </header>
   <div id="content">
-  <div id="izquierdo">
+  <div class="main">
+    <div id="izquierdo">
     <img src="images/phones.png">
   </div>
   <div id="derecho">
@@ -32,19 +33,20 @@
       <img class="down-button" src="images/badge-android.png">
     </div>
   </div>
-
 </div>
 <footer>
-  <span>About Us</span>
-  <span>Support</span>
-  <span>Blog</span>
-  <span>Press</span>
-  <span>API</span>
-  <span>Jobs</span>
-  <span>Privacy</span>
-  <span>Terms</span>
-  <span class="copyright">&copy; 2014 Instagram</span>
-</footer>
+    <span>About Us</span>
+    <span>Support</span>
+    <span>Blog</span>
+    <span>Press</span>
+    <span>API</span>
+    <span>Jobs</span>
+    <span>Privacy</span>
+    <span>Terms</span>
+    <span class="copyright">&copy; 2014 Instagram</span>
+  </footer>
+</div>
+
 
 </body>
 </html>
