--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -5,45 +5,49 @@
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  <main>
-
-    <div class="banner">
-      <img src="images/phones.png" alt="phones-banner">
-    </div>
-
-    <div class="description">
-      <div class="home">
-        <img src="images/brand.png" alt="instagram">
-        <a href="#"><button type="button" name="button"><img src="images/home.png" alt="home-login">Log in</button></a>
+  <div class="blue-box"></div>
+  <div class="grey-box"></div>
+  <div class="content">
+    <main>
+      <div class="banner">
+        <img src="images/phones.png" alt="phones-banner">
       </div>
-      <div class="content-text">
-        <h1>Capture and Share the World's Moments</h1>
-        <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
 
-        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+      <div class="description">
+        <div class="home">
+          <img src="images/brand.png" alt="instagram">
+          <a href="#"><div class="button">
+            <img src="images/home.png" alt="home-login"><span>Log in</span>
+          </div></a>
+        </div>
+        <div class="content-text">
+          <h1>Capture and Share the World's Moments</h1>
+          <p>Instagram is a <span>fast, beautiful</span> and <span>fun</span> way to share your life with friends and family.</p>
 
-        <p class="ultimo-parrafo">Oh yeah, did we mention it's free?</p>
-        <div>
-          <img src="images/badge-iphone.png" alt="app-store">
-          <img src="images/badge-android.png" alt="google-store">
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+
+          <p class="ultimo-parrafo">Oh yeah, did we mention it's free?</p>
+          <div>
+            <img src="images/badge-iphone.png" alt="app-store">
+            <img src="images/badge-android.png" alt="google-store">
+          </div>
         </div>
       </div>
-    </div>
-  </main>
+    </main>
 
-  <footer>
-    <ul>
-      <a href="#"><li>About Us</li></a>
-      <a href="#"><li>Support</li></a>
-      <a href="#"><li>Blog</li></a>
-      <a href="#"><li>Press</li></a>
-      <a href="#"><li>API</li></a>
-      <a href="#"><li>Jobs</li></a>
-      <a href="#"><li>Privacy</li></a>
-      <a href="#"><li>Terms</li></a>
-      <li>&copy; 2014 Instagram</li>
-    </ul>
-  </footer>
-
+    <footer>
+      <ul>
+        <a href="#"><li>About Us</li></a>
+        <a href="#"><li>Support</li></a>
+        <a href="#"><li>Blog</li></a>
+        <a href="#"><li>Press</li></a>
+        <a href="#"><li>API</li></a>
+        <a href="#"><li>Jobs</li></a>
+        <a href="#"><li>Privacy</li></a>
+        <a href="#"><li>Terms</li></a>
+        <li class="copyright">&copy; 2014 Instagram</li>
+      </ul>
+    </footer>
+  </div>
 </body>
 </html>
