--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -46,6 +46,8 @@
         <div class="link">Jobs</div>
         <div class="link">Privacy</div>
         <div class="link">Terms</div>
+        <div class="copyright">&copy 2014 Instagram</div>
+        
       </div>
   </div>
 
