--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,45 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
-  Instagram
+  <img src="images/phones.png" alt="Phones" class="phones">
 
-  Capture and Share the World's Moments
+  <section class="pageHead">
+    <div class="head">
+      <img src="images/brand.png" alt="Logo & Brand" class="brand">
+      <button type="button" name="button"><img src="images/home.png"><p> Log in<p></button>
+    </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div class="contentBox">
+      <h1>Capture and Share the World's Moments</h1>
+      <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+      <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+      <p>Oh yeah, did we mention it's free?</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      <div class="storeLinks">
+        <a href="#"><img src="images/badge-iphone.png" alt="App Store" class="ios"></a>
+        <a href="#"><img src="images/badge-android.png" alt="Google Play" class="android"></a>
+      </div>
+    </div>
+  </section>
 
-  Oh yeah, did we mention it's free?
+  <footer class="pageFoot clearFix">
+    <div class="navBar">
+      <ul>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Support</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Press</a></li>
+        <li><a href="#">API</a></li>
+        <li><a href="#">Jobs</a></li>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Terms</a></li>
+      </ul>
+    <div class="copyright">&copy; 2014 Instagram</div>
+  </div>
+  </footer>
 
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
 </body>
 </html>
