feat: instagram web completed

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+  <head>
+    <title>Instagram</title>
+    <link rel="stylesheet" type="text/css" href="css/main.css">
+  </head>
+  <body>
+    <section class="up">
+    </section>
+    <section class="down">
+      <div class="left">
+        <img src="images/phones.png" alt="phones img">
+      </div>
+      <div class="right">
+        <div class="rightHeader">
+          <img class="instagram" src="images/brand.png">
+          <a href="https://www.instagram.com/accounts/login/?hl=es" class="loginButton"><img src="images/home.png"> Log in</a>
+        </div>
+        <div class="rightContent">
+          <h1>Capture and Share the World's Moments</h1>
+          <p>  
+            Instagram is a fast, beautiful and fun way to share your life with friends and family.
+            <br><br>
+            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+            <br><br>
+            Oh yeah, did we mention it's free?
+          </p>
+        </div>  
+        <div class="storeButtons">
+          <a href="https://itunes.apple.com/app/instagram/id389801252?mt=8"><img src="images/badge-iphone.png" alt="App Store"></a>
+          <a href="https://play.google.com/store/apps/details?id=com.instagram.android&referrer=utm_source%3Dinstagramweb%26utm_campaign%3DsignupPage%26utm_medium%3Dbadge"><img src="images/badge-android.png" alt="Google Play"></a>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <ul>
+        <li class ="link"><a href="https://www.instagram.com/about/us/">About Us</a></li>
+        <li class ="link"><a href="https://help.instagram.com/">Support</a></li>
+        <li class ="link"><a href="http://blog.instagram.com/">Blog</a></li>
+        <li class ="link"><a href="https://instagram-press.com/">Press</a></li>
+        <li class ="link"><a href ="https://www.instagram.com/developer/">API</a></li>
+        <li class ="link"><a href="https://www.instagram.com/about/jobs/">Jobs</a></li>
+        <li class ="link"><a href="https://www.instagram.com/legal/privacy/">Privacy</a></li>
+        <li class ="link"><a href="https://www.instagram.com/legal/terms/">Terms</a></li>
+        <li class="copyRight">&copy; 2014 Instagram</li>
+      </ul>
+    </section>
+  </body>
 </html>
+
+
+
+<!--
+      <div class="rightContent">
+        <h1>Capture and Share the World's Moments</h1>
+        <p>  
+          Instagram is a fast, beautiful and fun way to share your life with friends and family.
+          
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          
+          Oh yeah, did we mention it's free?
+        </p>
+
+        </div class="rightButtons">
+          <a href="https://itunes.apple.com/app/instagram/id389801252?mt=8" class="storeButton"><img src="images/badge-iphone.png" alt="App Store"></a>
+          <a href="https://play.google.com/store/apps/details?id=com.instagram.android&referrer=utm_source%3Dinstagramweb%26utm_campaign%3DsignupPage%26utm_medium%3Dbadge" class="storeButton"><img src="images/badge-android.png" alt="Google Play"></a>
+        </div>
+
+      </div-->
