--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <section id="main">
+    <img src="images/phones.png" alt="phones-image" class="phones-img">
+    <div class="section-part-right">
+      <div class="logo">
+        <img src="images/brand.png" alt="instagram-logo">
+        <div class="btn-login">
+          <a href="https://www.instagram.com/">
+            <img src="images/home.png" alt="home-logo">
+            <strong>Log In</strong>
+          </a>
+        </div>
+        <div class="clearfix"></div>
+      </div>
+      <div class="info">
+        <h1>Capture and Share <br>the World's Moments</h1>
+        <div class="info-paragraphs">
+          <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+          <br>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <br>
+          <p>Oh yeah, did we mention it's free?</p>
+        </div>
+        <div class="img-download">
+          <a href="https://itunes.apple.com/es/app/instagram/id389801252?mt=8"><img src="images/badge-iphone.png" alt="iphone-download"></a>
+          <a href="https://play.google.com/store/apps/details?id=com.instagram.android&hl=es"><img src="images/badge-android.png" alt="android-download"></a>
+        </div>
+      </div>
+    </div>
+  </section>
+  <footer>
+    <ul>
+      <li><a href="#">ABOUT US</a></li>
+      <li><a href="#">SUPPORT</a></li>
+      <li><a href="#">BLOG</a></li>
+      <li><a href="#">PRESS</a></li>
+      <li><a href="#">API</a></li>
+      <li><a href="#">JOBS</a></li>
+      <li><a href="#">PRIVACY</a></li>
+      <li><a href="#">TERMS</a></li>
+      <li>&copy; 2014 INSTAGRAM</li>
+    </ul>
+  </footer>
 </body>
+
 </html>
