--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,45 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="blue-box">
+  </div>
+  <div class="content">
+      <div class="left">
+        <img src="images/phones.png" class="image-phone">
+      </div>
+      <div class="right">
+        <div class="about">
+          <div>
+            <img src="images/brand.png" class="image-brand">
+            <div class="button-log">
+              <img src="images/home.png">
+              <div>Log in</div>
+            </div>
+          </div>
+          <div class="info">
+            <h1>Capture and Share </br> the World's Moments</h1>
+            Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+            <p>Oh yeah, did we mention it's free?</p>
+            <img src="images/badge-iphone.png">&nbsp;&nbsp;&nbsp;&nbsp;
+            <img src="images/badge-android.png">
+          </div>
+      </div>
+    </div>
+    <div class="footer">
+      ABOUT US&nbsp;&nbsp;
+      SUPPORT&nbsp;&nbsp;
+      BLOG&nbsp;&nbsp;
+      PRESS&nbsp;&nbsp;
+      API&nbsp;&nbsp;
+      JOBS&nbsp;&nbsp;
+      PRIVACY&nbsp;&nbsp;
+      TERMS&nbsp;&nbsp;&nbsp;&nbsp;
+      <span>&copy; 2014 INSTAGRAM</span>
+    </div>
+  </div>
 </body>
 </html>
