--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,21 +2,24 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
+  <section class="images">
+    <img src="images\phones.png" alt="Phones">
+  </section>
+  <section class="text">
+      <img src="images\brand.png" alt="Instagram">
+    <h1>Capture and Share the World's Moments</h1>
+    <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+    <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+    <p>Oh yeah, did we mention it's free?</p>
+  </section>
+  <section>
+    <img src="images\badge-iphone.png" alt="Download on the App Store">
+    <img src="images\badge-android.png" alt="Get it on Google Play">
+  </section>
+  <footer>
   About Us
   Support
   Blog
@@ -27,5 +30,6 @@
   Terms
 
   &copy; 2014 Instagram
+  </footer>
 </body>
 </html>
